--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ html {
 .section-1 {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgba(255, 255, 255, .2), rgba(255, 255, 255, .3)), url(./images/bg.jpg) center no-repeat;
+  background: linear-gradient(rgba(255, 255, 255, .2), rgba(255, 255, 255, .3)), url(bg.jpg) center no-repeat;
   background-size: cover;
   flex-direction: column;
 }
